The package is born

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -6,8 +6,8 @@
 parts = external python
 develop = .
 eggs = bob
-       gridtk
-       antispoofing.lbptop
+       antispoofing.utils
+
 find-links = http://www.idiap.ch/software/bob/packages/xbob/nightlies/last
 
 [external]
