Updated the version of the package

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -3,15 +3,10 @@
 #Fri Aug 31 09:00:55 CEST 2012
 
 [buildout]
-parts = external python
+parts = python
 develop = .
 eggs = bob
        antispoofing.utils
-find-links = http://www.idiap.ch/software/bob/packages/xbob/nightlies/last
-
-[external]
-recipe = xbob.buildout:external
-egg-directories = /idiap/home/tpereira/bob/bob/build
 
 [python]
 recipe = zc.recipe.egg
