Fixed #5 by correcting buildout.cfg

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -3,12 +3,10 @@
 #Fri Aug 31 09:00:55 CEST 2012
 
 [buildout]
-parts = python
+parts = scripts
 develop = .
 eggs = bob
        antispoofing.utils
 
-[python]
-recipe = zc.recipe.egg
-interpreter = python
-eggs = ${buildout:eggs}
+[scripts]
+recipe = xbob.buildout:scripts
