--- a/buildout.cfg
+++ b/buildout.cfg
@@ -10,7 +10,7 @@ eggs = bob
 
 ; Look at this directory to find bob in version 1.2.0
 ; prefixes = /idiap/group/torch5spro/nightlies/last/install/linux-x86_64-release
-prefixes = /idiap/group/torch5spro/releases/bob-1.2.0/install/linux-x86_64-release
+; prefixes = /idiap/group/torch5spro/releases/bob-1.2.0/install/linux-x86_64-release
 
 [scripts]
 recipe = xbob.buildout:scripts
