--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,16 +1,44 @@
-#!/usr/bin/env python
-#Tiago de Freitas Pereira <tiagofrepereira@gmail.com>
-#Fri Aug 31 09:00:55 CEST 2012
+; vim: set fileencoding=utf-8 :
+; Manuel Guenther <manuel.guenther@idiap.ch>
+; Mon Aug 25 15:44:24 CEST 2014
 
 [buildout]
 parts = scripts
-develop = .
-eggs = bob
-       antispoofing.utils
+eggs = antispoofing.utils
+extensions = bob.buildout
+             mr.developer
+auto-checkout = *
+develop = src/bob.extension
+          src/bob.blitz
+          src/bob.core
+          src/bob.io.base
+          src/bob.ip.color
+          src/bob.ip.draw
+          src/bob.math
+          src/bob.measure
+          src/bob.learn.activation
+          src/bob.learn.linear
+          src/bob.learn.libsvm
+          .
 
-; Look at this directory to find bob in version 1.2.0
-; prefixes = /idiap/group/torch5spro/nightlies/last/install/linux-x86_64-release
-; prefixes = /idiap/group/torch5spro/releases/bob-1.2.0/install/linux-x86_64-release
+; options for bob.buildout extension
+debug = true
+verbose = true
+newest = false
+
+[sources]
+bob.extension = git https://github.com/bioidiap/bob.extension
+bob.blitz = git https://github.com/bioidiap/bob.blitz
+bob.core = git https://github.com/bioidiap/bob.core
+bob.io.base = git https://github.com/bioidiap/bob.io.base
+bob.ip.color = git https://github.com/bioidiap/bob.ip.color
+bob.ip.draw = git https://github.com/bioidiap/bob.ip.draw
+bob.math = git https://github.com/bioidiap/bob.math
+bob.measure = git https://github.com/bioidiap/bob.measure
+bob.learn.activation = git https://github.com/bioidiap/bob.learn.activation
+bob.learn.linear = git https://github.com/bioidiap/bob.learn.linear
+bob.learn.libsvm = git https://github.com/bioidiap/bob.learn.libsvm
 
 [scripts]
-recipe = xbob.buildout:scripts
+recipe = bob.buildout:scripts
+
