--- a/.travis.yml
+++ b/.travis.yml
@@ -7,28 +7,26 @@ matrix:
     - secure: TpBgZ72cZz5eDn55KV4/Pnzuk0W2XmE1HAavsJeOfRGnBr1iu/82wTsjRvMtqIs2qlOe37D6qrVXq+kvw0UTclfEHQZYF+tEJ21Ygz13k8QRNSHC/vdOrpcx4O5WlSBT4s1fputGLY2peI4HB6x+buF0QniEwXvuaB1TyrfJnak=
     - secure: RBzGR1gwV+we4hVC1SPYnF/644xp42riULKUR629FboRUQr0NZ+nP1fpQGr3MZ1C0zzZt+ayvkWUZRoc8Khl/9sH0FtQT8kBOSbphuhT3m0c6BM/aQZ+qfCjPDG0ygT7DJYOcSNtH2aYPL7R9cerT01Kj9+BMKL8rI4U7lZVCuM=
     - BOB_DOCUMENTATION_SERVER=https://www.idiap.ch/software/bob/docs/latest/bioidiap/%s/master
-  - python: 3.2
-    env:
-    - NUMPYSPEC===1.8.0
-    - SPHINXSPEC===1.2
+    - BOB_UPLOAD_WHEEL="--universal"
   - python: 3.3
-    env:
-    - NUMPYSPEC===1.8.0
+  - python: 3.4
 before_install:
 - sudo add-apt-repository -y ppa:biometrics/bob
 - sudo apt-get update -qq
 - sudo apt-get install -qq --force-yes libboost-all-dev libblitz1-dev libhdf5-serial-dev libatlas-dev libatlas-base-dev liblapack-dev libsvm-dev texlive-latex-recommended texlive-latex-extra texlive-fonts-recommended
-- if [ -n "${NUMPYSPEC}" ]; then sudo apt-get install -qq gfortran; fi
-- if [ -n "${NUMPYSPEC}" ]; then pip install --find-links http://wheels.astropy.org/ --find-links http://wheels2.astropy.org/ --use-wheel numpy$NUMPYSPEC; fi
-- pip install --find-links http://wheels.astropy.org/ --find-links http://wheels2.astropy.org/ --use-wheel matplotlib==1.3.1 sphinx$SPHINXSPEC nose==1.3.0 jinja2==2.6 coveralls pygments==1.6
+- pip install --find-links https://www.idiap.ch/software/bob/wheels/travis/ --use-wheel sphinx nose numpy matplotlib coverage
+- pip install --find-links https://www.idiap.ch/software/bob/wheels/travis/ --use-wheel --pre -r requirements.txt coveralls
 install:
 - python bootstrap-buildout.py
-- ./bin/buildout
+- ./bin/buildout buildout:develop=. buildout:extensions=bob.buildout buildout:auto-checkout=
 script:
-- ./bin/python -c 'from antispoofing.utils import get_config; print(get_config())'
+- ./bin/python -c 'import pkg_resources; from antispoofing.utils import get_config; print(get_config())'
 - ./bin/coverage run --source=antispoofing.utils ./bin/nosetests -sv
 - ./bin/sphinx-build -b doctest doc sphinx
 - ./bin/sphinx-build -b html doc sphinx
 after_success:
 - coveralls
-- ./src/bob.extension/scripts/upload-sphinx.sh
+- wget https://raw.githubusercontent.com/bioidiap/bob.extension/master/scripts/upload-{sphinx,wheel}.sh
+- chmod a+x upload-sphinx.sh upload-wheel.sh
+- ./upload-sphinx.sh
+- ./upload-wheel.sh
